clicking tiles work properly